--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue": "^2.5.17"
     },
     "dependencies": {
-        "babel-plugin-syntax-dynamic-import": "^6.18.0"
+        "babel-plugin-syntax-dynamic-import": "^6.18.0",
+        "laravel-mix-copy-watched": "^2.1.3"
     }
 }
