--- a/.env_testing_example
+++ b/.env_testing_example
@@ -4,6 +4,8 @@ APP_KEY=base64:GTKe+CrPiN/erl85bqmNyqpfKGoDambkdSs93euvg9Q=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+TEST_USER_PASSWORD='secret'
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
