Create Status: cleanup

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,7 +3,10 @@
     "/css/app.css": "/css/app.css",
     "/js/components/client-form.js": "/js/components/client-form.js",
     "/js/components/client-grid.js": "/js/components/client-grid.js",
-    "/js/components/vendors~client-form.js": "/js/components/vendors~client-form.js",
+    "/js/components/client-grid~status-grid.js": "/js/components/client-grid~status-grid.js",
+    "/js/components/status-form.js": "/js/components/status-form.js",
+    "/js/components/status-grid.js": "/js/components/status-grid.js",
+    "/js/components/vendors~client-form~status-form.js": "/js/components/vendors~client-form~status-form.js",
     "/img/icons/danger.svg": "/img/icons/danger.svg",
     "/img/icons/help.svg": "/img/icons/help.svg",
     "/img/icons/square.svg": "/img/icons/square.svg",
