Clients cannow filter by assignee

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,14 +1,18 @@
 {
-    "/js/app.js": "/js/app.js?id=27c0c085e5a0505d42d1",
-    "/css/app.css": "/css/app.css?id=b0433faf7970a4f066e9",
-    "/js/components/client-form.js": "/js/components/client-form.js?id=aca9b049a576993982ce",
-    "/js/components/client-grid.js": "/js/components/client-grid.js?id=9027e3ffd1a208528ca5",
-    "/js/components/status-form.js": "/js/components/status-form.js?id=5805ee1c77caad6a790a",
-    "/js/components/status-grid.js": "/js/components/status-grid.js?id=71377794a921b26e40e9",
-    "/js/components/std-form-group.js": "/js/components/std-form-group.js?id=1d43d417f50b57062897",
-    "/img/icons/danger.svg": "/img/icons/danger.svg?id=99f8e62cb106e8135555",
-    "/img/icons/help.svg": "/img/icons/help.svg?id=7f32f22cc3d0749491a2",
-    "/img/icons/square.svg": "/img/icons/square.svg?id=872674365671e29ae64d",
-    "/img/icons/success.svg": "/img/icons/success.svg?id=fb22e992fd982e18b20c",
-    "/img/icons/warning.svg": "/img/icons/warning.svg?id=704d150bbb71873dc1f3"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css",
+    "/js/components/assignment-form.js": "/js/components/assignment-form.js",
+    "/js/components/assignment-grid.js": "/js/components/assignment-grid.js",
+    "/js/components/assignment-grid~client-grid~status-grid.js": "/js/components/assignment-grid~client-grid~status-grid.js",
+    "/js/components/client-form.js": "/js/components/client-form.js",
+    "/js/components/client-grid.js": "/js/components/client-grid.js",
+    "/js/components/status-form.js": "/js/components/status-form.js",
+    "/js/components/status-grid.js": "/js/components/status-grid.js",
+    "/js/components/std-form-group.js": "/js/components/std-form-group.js",
+    "/js/components/vendors~assignment-form~client-form~status-form.js": "/js/components/vendors~assignment-form~client-form~status-form.js",
+    "/img/icons/danger.svg": "/img/icons/danger.svg",
+    "/img/icons/help.svg": "/img/icons/help.svg",
+    "/img/icons/square.svg": "/img/icons/square.svg",
+    "/img/icons/success.svg": "/img/icons/success.svg",
+    "/img/icons/warning.svg": "/img/icons/warning.svg"
 }
