--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^7.5",
+        "zmon/laravel-crud-generator-zmon": "dev-master"
     },
     "config": {
         "optimize-autoloader": true,
