Step - inital mods

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,13 +3,15 @@
     "/css/app.css": "/css/app.css",
     "/js/components/assignment-form.js": "/js/components/assignment-form.js",
     "/js/components/assignment-grid.js": "/js/components/assignment-grid.js",
-    "/js/components/assignment-grid~client-grid~status-grid.js": "/js/components/assignment-grid~client-grid~status-grid.js",
+    "/js/components/assignment-grid~client-grid~status-grid~step-grid.js": "/js/components/assignment-grid~client-grid~status-grid~step-grid.js",
     "/js/components/client-form.js": "/js/components/client-form.js",
     "/js/components/client-grid.js": "/js/components/client-grid.js",
     "/js/components/status-form.js": "/js/components/status-form.js",
     "/js/components/status-grid.js": "/js/components/status-grid.js",
     "/js/components/std-form-group.js": "/js/components/std-form-group.js",
-    "/js/components/vendors~assignment-form~client-form~status-form.js": "/js/components/vendors~assignment-form~client-form~status-form.js",
+    "/js/components/step-form.js": "/js/components/step-form.js",
+    "/js/components/step-grid.js": "/js/components/step-grid.js",
+    "/js/components/vendors~assignment-form~client-form~status-form~step-form.js": "/js/components/vendors~assignment-form~client-form~status-form~step-form.js",
     "/img/icons/danger.svg": "/img/icons/danger.svg",
     "/img/icons/help.svg": "/img/icons/help.svg",
     "/img/icons/square.svg": "/img/icons/square.svg",
