--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -15,5 +15,10 @@
     "/img/icons/square.svg": "/img/icons/square.svg",
     "/img/icons/success.svg": "/img/icons/success.svg",
     "/img/icons/warning.svg": "/img/icons/warning.svg",
-    "/js/components/client-Show.js": "/js/components/client-Show.js"
+    "/js/components/client-Show.js": "/js/components/client-Show.js",
+    "/js/components/assignment-grid~client-grid~conviction-grid~status-grid.js": "/js/components/assignment-grid~client-grid~conviction-grid~status-grid.js",
+    "/js/components/conviction-Show.js": "/js/components/conviction-Show.js",
+    "/js/components/conviction-form.js": "/js/components/conviction-form.js",
+    "/js/components/conviction-grid.js": "/js/components/conviction-grid.js",
+    "/js/components/vendors~assignment-form~client-form~conviction-form~status-form.js": "/js/components/vendors~assignment-form~client-form~conviction-form~status-form.js"
 }
