--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -5,15 +5,25 @@
     "/js/components/assignment-form.js": "/js/components/assignment-form.js",
     "/js/components/assignment-grid.js": "/js/components/assignment-grid.js",
     "/js/components/assignment-grid~charge-grid~client-grid~conviction-grid~status-grid~step-grid.js": "/js/components/assignment-grid~charge-grid~client-grid~conviction-grid~status-grid~step-grid.js",
+    "/js/components/cases.js": "/js/components/cases.js",
     "/js/components/charge-Show.js": "/js/components/charge-Show.js",
     "/js/components/charge-form.js": "/js/components/charge-form.js",
     "/js/components/charge-grid.js": "/js/components/charge-grid.js",
+    "/js/components/charges.js": "/js/components/charges.js",
     "/js/components/client-Show.js": "/js/components/client-Show.js",
     "/js/components/client-form.js": "/js/components/client-form.js",
     "/js/components/client-grid.js": "/js/components/client-grid.js",
     "/js/components/conviction-Show.js": "/js/components/conviction-Show.js",
     "/js/components/conviction-form.js": "/js/components/conviction-form.js",
     "/js/components/conviction-grid.js": "/js/components/conviction-grid.js",
+    "/js/components/dsp-boolean.js": "/js/components/dsp-boolean.js",
+    "/js/components/dsp-text.js": "/js/components/dsp-text.js",
+    "/js/components/dsp-textarea.js": "/js/components/dsp-textarea.js",
+    "/js/components/fld-checkbox.js": "/js/components/fld-checkbox.js",
+    "/js/components/fld-input.js": "/js/components/fld-input.js",
+    "/js/components/fld-state.js": "/js/components/fld-state.js",
+    "/js/components/fld-text-area.js": "/js/components/fld-text-area.js",
+    "/js/components/search-form-group.js": "/js/components/search-form-group.js",
     "/js/components/status-Show.js": "/js/components/status-Show.js",
     "/js/components/status-form.js": "/js/components/status-form.js",
     "/js/components/status-grid.js": "/js/components/status-grid.js",
@@ -26,16 +36,5 @@
     "/img/icons/help.svg": "/img/icons/help.svg",
     "/img/icons/square.svg": "/img/icons/square.svg",
     "/img/icons/success.svg": "/img/icons/success.svg",
-    "/img/icons/warning.svg": "/img/icons/warning.svg",
-    "/js/components/dsp-boolean.js": "/js/components/dsp-boolean.js",
-    "/js/components/dsp-text.js": "/js/components/dsp-text.js",
-    "/js/components/dsp-textarea.js": "/js/components/dsp-textarea.js",
-    "/js/components/fld-checkbox.js": "/js/components/fld-checkbox.js",
-    "/js/components/fld-input.js": "/js/components/fld-input.js",
-    "/js/components/fld-state.js": "/js/components/fld-state.js",
-    "/js/components/fld-text-area.js": "/js/components/fld-text-area.js",
-    "/js/components/fld-text-editor.js": "/js/components/fld-text-editor.js",
-    "/js/components/search-form-group.js": "/js/components/search-form-group.js",
-    "/js/components/cases.js": "/js/components/cases.js",
-    "/js/components/charges.js": "/js/components/charges.js"
+    "/img/icons/warning.svg": "/img/icons/warning.svg"
 }
