--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -36,5 +36,7 @@
     "/img/icons/help.svg": "/img/icons/help.svg",
     "/img/icons/square.svg": "/img/icons/square.svg",
     "/img/icons/success.svg": "/img/icons/success.svg",
-    "/img/icons/warning.svg": "/img/icons/warning.svg"
+    "/img/icons/warning.svg": "/img/icons/warning.svg",
+    "/img/icons/noun_collapse_2091048_000000.png": "/img/icons/noun_collapse_2091048_000000.png",
+    "/img/icons/noun_expand_1211939_000000.png": "/img/icons/noun_expand_1211939_000000.png"
 }
