Renamed Client to Applicant, coomponts only

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,21 +1,21 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
+    "/js/components/applicant-Show.js": "/js/components/applicant-Show.js",
+    "/js/components/applicant-form.js": "/js/components/applicant-form.js",
+    "/js/components/applicant-grid.js": "/js/components/applicant-grid.js",
+    "/js/components/applicant-grid~assignment-grid~case-grid~charge-grid~status-grid~step-grid.js": "/js/components/applicant-grid~assignment-grid~case-grid~charge-grid~status-grid~step-grid.js",
     "/js/components/assignment-Show.js": "/js/components/assignment-Show.js",
     "/js/components/assignment-form.js": "/js/components/assignment-form.js",
     "/js/components/assignment-grid.js": "/js/components/assignment-grid.js",
-    "/js/components/assignment-grid~charge-grid~client-grid~conviction-grid~status-grid~step-grid.js": "/js/components/assignment-grid~charge-grid~client-grid~conviction-grid~status-grid~step-grid.js",
+    "/js/components/case-Show.js": "/js/components/case-Show.js",
+    "/js/components/case-form.js": "/js/components/case-form.js",
+    "/js/components/case-grid.js": "/js/components/case-grid.js",
     "/js/components/cases.js": "/js/components/cases.js",
     "/js/components/charge-Show.js": "/js/components/charge-Show.js",
     "/js/components/charge-form.js": "/js/components/charge-form.js",
     "/js/components/charge-grid.js": "/js/components/charge-grid.js",
     "/js/components/charges.js": "/js/components/charges.js",
-    "/js/components/client-Show.js": "/js/components/client-Show.js",
-    "/js/components/client-form.js": "/js/components/client-form.js",
-    "/js/components/client-grid.js": "/js/components/client-grid.js",
-    "/js/components/conviction-Show.js": "/js/components/conviction-Show.js",
-    "/js/components/conviction-form.js": "/js/components/conviction-form.js",
-    "/js/components/conviction-grid.js": "/js/components/conviction-grid.js",
     "/js/components/dsp-boolean.js": "/js/components/dsp-boolean.js",
     "/js/components/dsp-text.js": "/js/components/dsp-text.js",
     "/js/components/dsp-textarea.js": "/js/components/dsp-textarea.js",
@@ -31,19 +31,12 @@
     "/js/components/step-Show.js": "/js/components/step-Show.js",
     "/js/components/step-form.js": "/js/components/step-form.js",
     "/js/components/step-grid.js": "/js/components/step-grid.js",
-    "/js/components/vendors~assignment-form~charge-form~client-form~conviction-form~status-form~step-form.js": "/js/components/vendors~assignment-form~charge-form~client-form~conviction-form~status-form~step-form.js",
+    "/js/components/vendors~applicant-form~assignment-form~case-form~charge-form~status-form~step-form.js": "/js/components/vendors~applicant-form~assignment-form~case-form~charge-form~status-form~step-form.js",
     "/img/icons/danger.svg": "/img/icons/danger.svg",
     "/img/icons/help.svg": "/img/icons/help.svg",
-    "/img/icons/square.svg": "/img/icons/square.svg",
-    "/img/icons/success.svg": "/img/icons/success.svg",
-    "/img/icons/warning.svg": "/img/icons/warning.svg",
     "/img/icons/noun_collapse_2091048_000000.png": "/img/icons/noun_collapse_2091048_000000.png",
     "/img/icons/noun_expand_1211939_000000.png": "/img/icons/noun_expand_1211939_000000.png",
-    "/js/components/vendors~assignment-form~charge-form~client-form~status-form~step-form.js": "/js/components/vendors~assignment-form~charge-form~client-form~status-form~step-form.js",
-    "/js/components/assignment-grid~charge-grid~client-grid~status-grid~step-grid.js": "/js/components/assignment-grid~charge-grid~client-grid~status-grid~step-grid.js",
-    "/js/components/assignment-grid~case-grid~charge-grid~client-grid~status-grid~step-grid.js": "/js/components/assignment-grid~case-grid~charge-grid~client-grid~status-grid~step-grid.js",
-    "/js/components/case-Show.js": "/js/components/case-Show.js",
-    "/js/components/case-form.js": "/js/components/case-form.js",
-    "/js/components/case-grid.js": "/js/components/case-grid.js",
-    "/js/components/vendors~assignment-form~case-form~charge-form~client-form~status-form~step-form.js": "/js/components/vendors~assignment-form~case-form~charge-form~client-form~status-form~step-form.js"
+    "/img/icons/square.svg": "/img/icons/square.svg",
+    "/img/icons/success.svg": "/img/icons/success.svg",
+    "/img/icons/warning.svg": "/img/icons/warning.svg"
 }
