--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -38,5 +38,6 @@
     "/img/icons/noun_expand_1211939_000000.png": "/img/icons/noun_expand_1211939_000000.png",
     "/img/icons/square.svg": "/img/icons/square.svg",
     "/img/icons/success.svg": "/img/icons/success.svg",
-    "/img/icons/warning.svg": "/img/icons/warning.svg"
+    "/img/icons/warning.svg": "/img/icons/warning.svg",
+    "/js/components/vendors~applicant-form~assignment-form~case-form~status-form~step-form.js": "/js/components/vendors~applicant-form~assignment-form~case-form~status-form~step-form.js"
 }
