--- a/package.json
+++ b/package.json
@@ -10,20 +10,23 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18",
+        "axios": "^0.18.1",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.5",
-        "popper.js": "^1.12",
+        "eslint": "^6.1.0",
+        "jquery": "^3.4.1",
+        "laravel-mix": "^4.1.2",
+        "lodash": "^4.17.15",
+        "popper.js": "^1.15.0",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
+        "sass": "^1.22.9",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.17"
+        "vue": "^2.6.10",
+        "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "babel-plugin-syntax-dynamic-import": "^6.18.0",
+        "eslint-plugin-vue": "^5.2.3",
         "laravel-mix-copy-watched": "^2.1.3"
     }
 }
