--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
         "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
-        "spatie/laravel-permission": "^2.37",
-        "zmon/laravel-crud-generator-zmon": "dev-master"
+        "spatie/laravel-permission": "^2.37"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -27,7 +26,8 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^7.5",
+        "zmon/laravel-crud-generator-zmon": "dev-master"
     },
     "config": {
         "optimize-autoloader": true,
