--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "babel-plugin-syntax-dynamic-import": "^6.18.0",
+        "bootstrap-vue": "^2.0.0-rc.27",
         "eslint-plugin-vue": "^5.2.3",
         "laravel-mix-copy-watched": "^2.1.3"
     }
