--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -19,8 +19,15 @@
     "/js/components/dsp-boolean.js": "/js/components/dsp-boolean.js",
     "/js/components/dsp-text.js": "/js/components/dsp-text.js",
     "/js/components/dsp-textarea.js": "/js/components/dsp-textarea.js",
+    "/js/components/fld-charge-class.js": "/js/components/fld-charge-class.js",
+    "/js/components/fld-charge-type.js": "/js/components/fld-charge-type.js",
     "/js/components/fld-checkbox.js": "/js/components/fld-checkbox.js",
+    "/js/components/fld-convicted.js": "/js/components/fld-convicted.js",
+    "/js/components/fld-eligible.js": "/js/components/fld-eligible.js",
+    "/js/components/fld-expunge.js": "/js/components/fld-expunge.js",
     "/js/components/fld-input.js": "/js/components/fld-input.js",
+    "/js/components/fld-race.js": "/js/components/fld-race.js",
+    "/js/components/fld-sex.js": "/js/components/fld-sex.js",
     "/js/components/fld-state.js": "/js/components/fld-state.js",
     "/js/components/fld-text-area.js": "/js/components/fld-text-area.js",
     "/js/components/search-form-group.js": "/js/components/search-form-group.js",
@@ -34,10 +41,23 @@
     "/js/components/vendors~applicant-form~assignment-form~case-form~charge-form~status-form~step-form.js": "/js/components/vendors~applicant-form~assignment-form~case-form~charge-form~status-form~step-form.js",
     "/img/icons/danger.svg": "/img/icons/danger.svg",
     "/img/icons/help.svg": "/img/icons/help.svg",
-    "/img/icons/noun_collapse_2091048_000000.png": "/img/icons/noun_collapse_2091048_000000.png",
-    "/img/icons/noun_expand_1211939_000000.png": "/img/icons/noun_expand_1211939_000000.png",
     "/img/icons/square.svg": "/img/icons/square.svg",
     "/img/icons/success.svg": "/img/icons/success.svg",
     "/img/icons/warning.svg": "/img/icons/warning.svg",
-    "/js/components/vendors~applicant-form~assignment-form~case-form~status-form~step-form.js": "/js/components/vendors~applicant-form~assignment-form~case-form~status-form~step-form.js"
+    "/js/components/assignment-grid~client-grid~status-grid.js": "/js/components/assignment-grid~client-grid~status-grid.js",
+    "/js/components/client-form.js": "/js/components/client-form.js",
+    "/js/components/client-grid.js": "/js/components/client-grid.js",
+    "/js/components/vendors~assignment-form~client-form~status-form.js": "/js/components/vendors~assignment-form~client-form~status-form.js",
+    "/js/components/assignment-grid~status-grid.js": "/js/components/assignment-grid~status-grid.js",
+    "/js/components/vendors~assignment-form~status-form.js": "/js/components/vendors~assignment-form~status-form.js",
+    "/img/icons/noun_chevron_2768158.png": "/img/icons/noun_chevron_2768158.png",
+    "/img/icons/noun_chevron_2768142.png": "/img/icons/noun_chevron_2768142.png",
+    "/img/icons/noun_Pencil_2768160.png": "/img/icons/noun_Pencil_2768160.png",
+    "/img/icons/noun_add_2768148.png": "/img/icons/noun_add_2768148.png",
+    "/img/icons/noun_collapse_2091048_000000.png": "/img/icons/noun_collapse_2091048_000000.png",
+    "/img/icons/noun_Search_2768159.png": "/img/icons/noun_Search_2768159.png",
+    "/img/icons/noun_Delete_2768150.png": "/img/icons/noun_Delete_2768150.png",
+    "/img/icons/noun_Chevron double down_2648933.png": "/img/icons/noun_Chevron double down_2648933.png",
+    "/img/icons/noun_Chevron double Up_2648915.png": "/img/icons/noun_Chevron double Up_2648915.png",
+    "/img/icons/noun_expand_1211939_000000.png": "/img/icons/noun_expand_1211939_000000.png"
 }
