--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -41,6 +41,14 @@
     "/js/components/vendors~applicant-form~assignment-form~case-form~charge-form~status-form~step-form.js": "/js/components/vendors~applicant-form~assignment-form~case-form~charge-form~status-form~step-form.js",
     "/img/icons/danger.svg": "/img/icons/danger.svg",
     "/img/icons/help.svg": "/img/icons/help.svg",
+    "/img/icons/noun_Chevron double Up_2648915.png": "/img/icons/noun_Chevron double Up_2648915.png",
+    "/img/icons/noun_Chevron double down_2648933.png": "/img/icons/noun_Chevron double down_2648933.png",
+    "/img/icons/noun_Delete_2768150.png": "/img/icons/noun_Delete_2768150.png",
+    "/img/icons/noun_Pencil_2768160.png": "/img/icons/noun_Pencil_2768160.png",
+    "/img/icons/noun_Search_2768159.png": "/img/icons/noun_Search_2768159.png",
+    "/img/icons/noun_add_2768148.png": "/img/icons/noun_add_2768148.png",
+    "/img/icons/noun_chevron_2768142.png": "/img/icons/noun_chevron_2768142.png",
+    "/img/icons/noun_chevron_2768158.png": "/img/icons/noun_chevron_2768158.png",
     "/img/icons/noun_collapse_2091048_000000.png": "/img/icons/noun_collapse_2091048_000000.png",
     "/img/icons/noun_expand_1211939_000000.png": "/img/icons/noun_expand_1211939_000000.png",
     "/img/icons/square.svg": "/img/icons/square.svg",
