--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
-        "spatie/laravel-permission": "^2.37"
+        "spatie/laravel-permission": "^2.37",
+        "ext-zip": "*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
