--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "babel-plugin-syntax-dynamic-import": "^6.18.0",
-        "laravel-mix-copy-watched": "^2.1.3"
+        "laravel-mix-copy-watched": "^2.1.3",
+        "moment": "^2.24.0"
     }
 }
