--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "babel-plugin-syntax-dynamic-import": "^6.18.0",
         "laravel-mix-copy-watched": "^2.1.3",
-        "moment": "^2.24.0"
+        "moment": "^2.24.0",
+        "vue-flatpickr-component": "^8.1.3"
     }
 }
