--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "vue": "^2.5.17"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^12.3.1",
+        "@ckeditor/ckeditor5-vue": "^1.0.0-beta.2",
         "babel-plugin-syntax-dynamic-import": "^6.18.0",
         "laravel-mix-copy-watched": "^2.1.3",
         "moment": "^2.24.0",
