--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
         "spatie/laravel-permission": "^2.37",
-        "ext-zip": "*"
+        "ext-zip": "*",
+        "symfony/yaml": "^4.3"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
