--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "babel-plugin-syntax-dynamic-import": "^6.18.0",
         "laravel-mix-copy-watched": "^2.1.3",
         "moment": "^2.24.0",
-        "vue-flatpickr-component": "^8.1.3"
+        "vue-flatpickr-component": "^8.1.3",
+        "vue-password": "^1.2.0"
     }
 }
