--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "laravel-mix-copy-watched": "^2.1.3",
         "moment": "^2.24.0",
         "vue-flatpickr-component": "^8.1.3",
-        "vue-password": "^1.2.0"
+        "vue-password": "^1.2.0",
+        "vue-select": "^3.2.0"
     }
 }
