--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
+        "stylus": "^0.54.7",
+        "stylus-loader": "^3.0.2",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     },
