--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "maatwebsite/excel": "^3.1.8",
         "spatie/laravel-permission": "^2.37",
         "ext-zip": "*",
-        "symfony/yaml": "^4.3"
+        "symfony/yaml": "^4.3",
+        "laravel/ui": "^2.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
