--- a/.env.example.testing
+++ b/.env.example.testing
@@ -25,9 +25,9 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-#MAIL_DRIVER=log
+#MAIL_MAILER=log
 
-MAIL_DRIVER=array
+MAIL_MAILER=array
 
 
 PUSHER_APP_ID=
