--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "@ckeditor/ckeditor5-build-classic": "^12.3.1",
         "@ckeditor/ckeditor5-vue": "^1.0.0-beta.2",
         "babel-plugin-syntax-dynamic-import": "^6.18.0",
+        "html-docx-js": "^0.3.1",
+        "html-to-docx": "^1.1.31",
         "laravel-mix-copy-watched": "^2.1.3",
         "moment": "^2.24.0",
         "serialize-javascript": "^2.1.2",
