--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "@ckeditor/ckeditor5-build-classic": "^12.3.1",
-        "@ckeditor/ckeditor5-vue": "^1.0.0-beta.2",
+        "@ckeditor/ckeditor5-build-classic": "^29.2.0",
+        "@ckeditor/ckeditor5-vue2": "^1.0.5",
         "babel-plugin-syntax-dynamic-import": "^6.18.0",
         "html-docx-js": "^0.3.1",
         "html-to-docx": "^1.1.31",
