--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.2.5",
         "ext-zip": "*",
+        "aws/aws-sdk-php": "^3.199",
         "bjeavons/zxcvbn-php": "^1.1",
         "doctrine/dbal": "^3.0",
         "elibyy/tcpdf-laravel": "^7.0",
